# cmd/ambulance-api-service/main.go
@@ -8,6 +8,10 @@ import (
     "github.com/gin-gonic/gin"
     "github.com/dpetricko/ambulance-webapi/api"
     "github.com/dpetricko/ambulance-webapi/internal/ambulance_wl"
+    "github.com/dpetricko/ambulance-webapi/internal/db_service"
+    "context"
+    "time"
+    "github.com/gin-contrib/cors"
 )
 
 func main() {
@@ -22,7 +26,23 @@ func main() {
     }
     engine := gin.New()
     engine.Use(gin.Recovery())
+    corsMiddleware := cors.New(cors.Config{
+        AllowOrigins:     []string{"*"},
+        AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+        AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+        ExposeHeaders:    []string{""},
+        AllowCredentials: false,
+        MaxAge: 12 * time.Hour,
+    })
+    engine.Use(corsMiddleware)
     // request routings
+    // setup context update  middleware
+    dbService := db_service.NewMongoService[ambulance_wl.Ambulance](db_service.MongoServiceConfig{})
+    defer dbService.Disconnect(context.Background())
+    engine.Use(func(ctx *gin.Context) {
+        ctx.Set("db_service", dbService)
+        ctx.Next()
+    })
     ambulance_wl.AddRoutes(engine)
     engine.GET("/openapi", api.HandleOpenApi)
     engine.Run(":" + port)
